--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.FTPClientAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +25,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddFTP"
+            android:name=".activities.AddFTP"
             android:exported="true" />
         <activity
-            android:name=".FileList"
+            android:name=".activities.SearchFTP"
+            android:exported="true" />
+        <activity
+            android:name=".activities.FileList"
             android:exported="true" />
     </application>
 
