Refactor appId and package name Complete SearchFTP system Complete search of FileList Complete move file of FileList remove move file from FileCommand

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.ftpclientandroid'
+    namespace 'com.kyang.ftpclient'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.ftpclientandroid"
+        applicationId "com.kyang.ftpclient"
         minSdk 26
         targetSdk 33
         versionCode 1
