Try to fix Reuse TLS connection in Apache Commons, Failed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('C:\\Onedrive\\OneDrive - rongkang\\Documents\\token\\IDEAToken.jks')
+            storePassword '123456'
+            keyAlias 'idea'
+            keyPassword '123456'
+        }
+    }
     namespace 'com.kyang.ftpclient'
     compileSdk 33
 
